--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,13 +1,13 @@
-source 'https://github.com/CocoaPods/Specs.git'
-
+#source 'https://github.com/CocoaPods/Specs.git'
+source 'https://mirrors.tuna.tsinghua.edu.cn/git/CocoaPods/Specs.git'
 use_frameworks!
 
 platform :ios, '11.0'
 
 target 'TTGTagCollectionView_Example' do
   pod 'TTGTagCollectionView', :path => '../'
-  pod 'Masonry', :git => 'git@github.com:SnapKit/Masonry.git', :tag => 'v1.1.0'
-  pod 'SVPullToRefresh', :git => 'git@github.com:samvermette/SVPullToRefresh.git', :tag => '0.4.1'
+  pod 'Masonry'
+  pod 'SVPullToRefresh'
 
   target 'TTGTagCollectionView_Tests' do
     inherit! :search_paths
